feat: update jdk in pom to 19 and add latest maven version